# ia_analysis

./: .gitignore  CatMesh.py  Cov.py  DWE.py  Iana.py  LICENSE  PUBLISH_MANIFEST.txt  README.md  SnapMesh.py  TNGCatLoader.py  _compat.py  arts.py  arts_IA.py  catalog_loader.py  global_cs.py  global_tng.py  halo_dynamics.py  halo_maker.py  hd_tng.py  hd_tng_mea_enriched.py  hd_tng_patched.py  ia_corr.py  ia_pk_cs.py  ia_pk_folded.py  orbit_nfw.py  orbit_viz.py  orbit_viz2.py  pk_batch_self_folding.py  plot_GH_alignment_parallel.py  powers.py  pyproject.toml  run_cs.py  run_tng.py  shape.py  theory_nla_pk.py  tidal_field.py  tng_layered_shape_tide.py
configs/: example_paths.json
docs/: alignment_mg_baryon_diagnostics.md  api_facades.md  architecture.md  correlations.md  hod.md  layered_pipeline_architecture.md  merger_tree.md  notebook_exports.md  notebook_pipeline_map.md  orbit_template_plan.md  running.md  snapshot_target_analysis.md  tidal_stripping_literature.md  velocity_divergence_self_folding.md  visualization.md  wsl_jupyter_orbits.md
notebooks/: README.md
requirements/: core.txt  cosma.txt  dev.txt  orbits-conda.yml  orbits-full-conda.yml
tests/: conftest.py  test_alignment_mg_baryon_report.py  test_arts_ia.py  test_catalogs.py  test_correlations.py  test_dynamics_binding.py  test_hod_api.py  test_hod_assembly.py  test_hod_ia_measurements.py  test_hod_ia_models.py  test_hod_ia_reference.py  test_hod_models.py  test_hod_phase_space.py  test_hod_statistics.py  test_hod_workflow_notebook.py  test_layer_dependencies.py  test_layered_analysis.py  test_shapes.py  (+5 more)
(+176 files in other folders)
